--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <title>Fantastically Photographic Photography</title>
@@ -9,7 +10,7 @@
 
 <body>
   <img class="background-image" src="https://upload.wikimedia.org/wikipedia/commons/d/d5/El_Perell%C3%B3_-_Old_olive_tree.jpg" alt="File:El Perelló - Old olive tree.jpg" alt="Olives">
-  <nav class="navbar sticky-stop navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/23/Ic_camera_48px.svg"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,8 +18,8 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
@@ -29,12 +30,27 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/reviews.html">Reviews</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/contact-us.html">Contact Us</a>
-        </li>
       </ul>
     </div>
   </nav>
+  <div class="main-view flex-columns">
+    <div class="info">
+      <h4>
+        Fantastically Photographic Photography
+      </h4>
+      <hr>
+      <p>
+        Here at Fantastically Photographic Photography, we specialize in making you and/or your family and/or your house and/or your pet look fantastically photogephenic!
+      </p>
+      <P>
+        Check out our rave reviews, and then hop over to our portfolio to see some of our work.
+      </P>
+    </div>
+    <div class="image-grid">
+      <img class="square-image" src="https://live.staticflickr.com/6045/6268129336_a07bae6852.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/7424/10123521633_43f5575334_b.jpg">
+    </div>
+  </div>    
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
     <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke">GitHub</a>
   </nav>
