--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
-  <title>Your title here</title>
+  <title>Fantastically Photographic Photographic</title>
 </head>
-
 <body>
-  <h1>Portfolio</h1>
+  <img class="background-image" src="https://upload.wikimedia.org/wikipedia/commons/d/d5/El_Perell%C3%B3_-_Old_olive_tree.jpg" alt="File:El Perelló - Old olive tree.jpg" alt="Olives">
+  <nav class="navbar sticky-stop navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/23/Ic_camera_48px.svg"></a>\  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/pages/portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/reviews.html">Reviews</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="info">
+    <h4>Portfolio</h4>
+  </div>
+  <div class="main-view">
+    <div class=image-grid>
+      <img class="square-image" src="https://live.staticflickr.com/6045/6268129336_a07bae6852.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/7424/10123521633_43f5575334_b.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/8376/8367600279_ac56e7454d_b.jpg">
+    </div>
+    <div class=image-grid>
+      <img class="square-image" src="https://live.staticflickr.com/3560/3576111171_66c1fc2462_b.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/2481/3965577568_301de2d0f5_b.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/4062/5169154193_4b8a5a7a80_b.jpg">
+    </div>
+    <div class=image-grid>
+      <img class="square-image" src="https://live.staticflickr.com/4103/4971832860_8c25345e37_b.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/8331/8135408260_ca73c98a55_b.jpg">
+      <img class="square-image" src="https://live.staticflickr.com/4005/4275395512_66d5c8b622_b.jpg">
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke">GitHub</a>
+  </nav>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
