--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         Here at Fantastically Photographic Photography, we specialize in making you and/or your family and/or your house and/or your pet look fantastically photogephenic!
       </p>
       <P>
-        Check out our rave reviews, and then hop over to our portfolio to see some of our work.
+        Check out our rave <a href="pages/reviews.html">reviews</a>, and then hop over to our <a href="pages/portfolio.html">portfolio</a> to see some of our work!
       </P>
     </div>
     <div class="image-grid">
@@ -52,7 +52,7 @@
     </div>
   </div>    
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke">GitHub</a>
+    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke"  target="_blank">GitHub</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
