--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -41,16 +41,16 @@
           <p>10/10 would recommend</p>
       </div>
       <div class="info">
-        <h4>Ender W.</h4>
+        <h4>E. Wiggin</h4>
         <p>Very clever use of perspective</p>
-        <p>I'm almost happy here...</p>
+        <p>I'm almost happy here. . .</p>
         <p>But I don't remember what beautiful means anymore</p>
       </div>
       <div class="info">
         <h4>Peter P.</h4>
         <p>What can I say?</p>
         <p>With great pricing comes great photography</p>
-        <p>FPP's my new friendly neighborhood photographer</p>
+        <p>My new friendly neighborhood photographer</p>
       </div>
     </div>
     <div class=image-grid>
@@ -64,7 +64,7 @@
         <h4>GLaDOS</h4>
         <p>This was a triumph</p>
         <p>I'm making a note here: huge success</p>
-        <p>It's hard to overstate my satisfaction...</p>
+        <p>It's hard to overstate my satisfaction. . .</p>
       </div>
       <div class="info">
         <h4>F. Gump</h4>
@@ -79,12 +79,22 @@
         <p>There's no going back now</p>
         <p>Some things, time cannot mend. Some hurts go too deep.</p>
       </div>
-      <div class="info">Stuff</div>
-      <div class="info">Stuff</div>
+      <div class="info">
+          <h4>A. Monk</h4>
+          <p>This website is a fake.</p>
+          <p>Unless I'm wrong.</p>
+          <p>Which, you know, I'm not.</p>
+      </div>
+      <div class="info">
+        <h4>Dalinar K.</h4>
+          <p>The most important word a man can say are, "I will do better."</p>
+          <p>These are not the most important words any man can say.</p>
+          <p>Mr. Schulzke is a man, and they are what he needs to say.</p>
+      </div>
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke">GitHub</a>
+    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke"  target="_blank">GitHub</a>
   </nav>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
