changes for responsive design

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
   <div class="main-view flex-columns">
-    <div class="info">
+    <div class="info optional">
       <h4>
         Fantastically Photographic Photography
       </h4>
