--- a/pages/about.html
+++ b/pages/about.html
@@ -39,18 +39,20 @@
       <div class="flex-columns">
         <img class="square-image profile" src="https://lh3.googleusercontent.com/YsNhMAg2tqmnr0xNEoiC8FgbQfHR7eRBuduogPUWscnSUy_dtVe8jXbl5SuRq6cMDEU-smTK6J-Ia8qa_IXr6N1w9zw0pBtWlj03pbB0IR-NnAAE9sctL-xIiWcwrK47hsyXzh9oPku81sGBAmsE4TqG45s519BTgjoSGaI3VPLGShxReRzUhM0cH9PlsK7f42clT8SbbxnAt0GypZuAZx37mzpuXYea6vGEoYFu-H1atNq68BKCWVipNPeT3liUyLCXx0t2doSUb8uvLXJU_JtvDV6URtawFF-UpOPapm4tE-GCiiUUPW8QpzOr68Sx_8Fcj8Q6xYNi2RUG_Fns8wp0U1TueRDY_MdsJ2_2X_KOi4MbZexAPMW8fSsi5MFC3dtVV1KP4aWSv6vIEk0zj866u-ERLJ5QnESuOFq8wb5CuKu6IaDY9q_iFEjI7qZBky5bafVueUtuoMobcM5GqTmZu351nAY3R7U9Gk0xF5_lx_CxdFlVzDmdGOtUunFMvHRGFavQUNkiuhAOe3DfUqTHigFr7iglvsAX3Zn9crZxo_Xp29z5T77PDizCdNGBHR8uK0inZCUr70e_0J85uGQ-lnpKngvyeoUchmeIXqekhIrD1t5oYrcQ_ZWQjm8dOGQzSmKQwmvKhEWBM38GZ7yyVDLINfHHRrrys48aZjC7gLrZXgRqZMQwAIiAGtVQmgLtuXhT8ArzO3mAfM58itc=w678-h903-no?authuser=0"/>
         <div class="info">
-          <h4>Ben Schulzke</h4>
+          <h4 class="optional">Ben Schulzke</h4>
           <p>Ben Schulzke, creator of Fantastically Photographic Photography, is a mild-mannered citizen heralding from the Pleasant Grove.</p>
-          <p>Unlike many of his mild-mannered peers, Schulzke has no supernatural abilities, nor is he a billionaire or an orphaned alien.</p>
-          <p>He's the photographer, of course. But he doesn't really take many pictures.</p>
-          <p>In fact, what he does is as much a mystery to himself as to his peers.</p>
+          <div class="optional">
+            <p class="optoinal">Unlike many of his mild-mannered peers, Schulzke has no supernatural abilities, nor is he a billionaire or an orphaned alien.</p>
+            <p class="optoinal">He's the photographer, of course. But he doesn't really take many pictures.</p>
+            <p class="optoinal">In fact, what he does is as much a mystery to himself as to his peers.</p>
+          </div>
         </div>
       </div>
     </div>
     
   </div>
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke">GitHub</a>
+    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke"  target="_blank">GitHub</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
