Playing with CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img class="background-image" src="https://upload.wikimedia.org/wikipedia/commons/d/d5/El_Perell%C3%B3_-_Old_olive_tree.jpg" alt="File:El Perelló - Old olive tree.jpg" alt="Olives">
+  <img class="background-image" src="/images/shenan-again-cover.PNG" alt="File:El Perelló - Old olive tree.jpg" alt="Olives">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/23/Ic_camera_48px.svg"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,10 +45,6 @@
       <P>
         Check out our rave <a href="pages/reviews.html">reviews</a>, and then hop over to our <a href="pages/portfolio.html">portfolio</a> to see some of our work!
       </P>
-    </div>
-    <div class="image-grid">
-      <img class="square-image" src="https://live.staticflickr.com/6045/6268129336_a07bae6852.jpg">
-      <img class="square-image" src="https://live.staticflickr.com/7424/10123521633_43f5575334_b.jpg">
     </div>
   </div>    
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
