--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
-  <title>Fantastically Photographic Photography</title>
+  <link rel="icon" href="/images/clock.PNG">
+  <title>Shenan-Again</title>
 </head>
 
 <body>
-  <img class="background-image" src="/images/shenan-again-cover.PNG" alt="File:El Perelló - Old olive tree.jpg" alt="Olives">
+  <!-- <img class="background-image" src="/images/shenan-again-cover.PNG" alt="File:El Perelló - Old olive tree.jpg" alt="Olives"> -->
+  <img class="background-image" src="images/clock.PNG"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/23/Ic_camera_48px.svg"></a>
+    <a class="navbar-brand" href="#"><img height=50px; src="/images/clock.PNG"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -36,7 +38,7 @@
   <div class="main-view flex-columns">
     <div class="info optional">
       <h4>
-        Fantastically Photographic Photography
+        Shenan-Again
       </h4>
       <hr>
       <p>
