Add info text on homepage

--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
       </h4>
       <hr>
       <p>
-        Here at Fantastically Photographic Photography, we specialize in making you and/or your family and/or your house and/or your pet look fantastically photogephenic!
-      </p>
-      <P>
-        Check out our rave <a href="pages/reviews.html">reviews</a>, and then hop over to our <a href="pages/portfolio.html">portfolio</a> to see some of our work!
-      </P>
+        Shenan-Again is all about controlled chaos. You'll play as a
+        crew of thieves pulling off a difficult heist, with a time-warping twist. You’ll enjoy thrilling successes, but you’ll also face
+        crushing—yet often hilarious—failures. Shenan-Again is a game about taking
+        risks and learning from mistakes. It’s about second chances.
+        </p>
+        <p>
+          This isn't just a heist story. It’s a <em>time-loop</em> heist story. In the game, you’ll
+        relive the same heist three times, giving you the chance to reasses and perfect your plan after things inevitably falls apart the first time through.
+        </p>
     </div>
   </div>    
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/BYUCS260/lab-1-photography-website-bschulzke"  target="_blank">GitHub</a>
+    <a class="navbar-brand" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
