Added placeholder pages, update styling

--- a/index.html
+++ b/index.html
@@ -24,28 +24,29 @@
           <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/pages/rulebook.html">Rulebook</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/extras.html">Extras</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/reviews.html">Reviews</a>
+          <a class="nav-link" href="/pages/contribute.html">Contribute</a>
         </li>
       </ul>
     </div>
   </nav>
-  <div class="main-view flex-columns">
+  <div class="main-view">
     <div class="info optional">
-      <h4>
-        Shenan-Again
-      </h4>
-      <hr>
       <p>
-        Shenan-Again is all about controlled chaos. You'll play as a
+        Shenan-Again is a game of controlled chaos.</p> 
+        <p>You'll play as a
         crew of thieves pulling off a difficult heist, with a time-warping twist. You’ll enjoy thrilling successes, but you’ll also face
         crushing—yet often hilarious—failures. Shenan-Again is a game about taking
         risks and learning from mistakes. It’s about second chances.
+        </p>
         </p>
         <p>
           This isn't just a heist story. It’s a <em>time-loop</em> heist story. In the game, you’ll
@@ -54,7 +55,11 @@
     </div>
   </div>    
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
+      </li>
+    </ul>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
