update color scheme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  <!-- <img class="background-image" src="/images/shenan-again-cover.PNG" alt="File:El Perelló - Old olive tree.jpg" alt="Olives"> -->
   <img class="background-image" src="images/clock.PNG"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><img height=50px; src="/images/clock.PNG"></a>
@@ -39,22 +38,28 @@
     </div>
   </nav>
   <div class="main-view">
-    <div class="info optional">
-      <p>
+    <div class="info">
+      <!-- <p>
         Shenan-Again is a game of controlled chaos.</p> 
         <p>You'll play as a
         crew of thieves pulling off a difficult heist, with a time-warping twist. You’ll enjoy thrilling successes, but you’ll also face
         crushing—yet often hilarious—failures. Shenan-Again is a game about taking
         risks and learning from mistakes. It’s about second chances.
         </p>
-        </p>
-        <p>
+        <p class="optional">
           This isn't just a heist story. It’s a <em>time-loop</em> heist story. In the game, you’ll
-        relive the same heist three times, giving you the chance to reasses and perfect your plan after things inevitably falls apart the first time through.
-        </p>
+        relive the same heist three times, giving you the chance to reasses and perfect your plan after things inevitably fall apart the first time through.
+        </p> -->
+        <p>Control the Chaos</p>
+        <br>
+        <p class="mid-tagline">Bend Time</p>
+        <br>
+        <p class="last-tagline">Pull off the Perfect Heist</p>
+        <br>
+        <a href="">Download Now</a>
     </div>
   </div>    
-  <nav class="navbar fixed-bottom navbar-dark bg-dark">
+  <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
