--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -39,7 +39,7 @@
     </div>
   </nav>
   <div class="main-view">
-    <div class="info optional">
+    <div class="info">
       <p>
           Contribute
       </p>
