Blueprint styles, simplistic home page, lots of styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <img class="background-image" src="images/clock.PNG"/>
+  <img class="background-image" src="/images/lines.PNG"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><img height=50px; src="/images/clock.PNG"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,13 +50,12 @@
           This isn't just a heist story. It’s a <em>time-loop</em> heist story. In the game, you’ll
         relive the same heist three times, giving you the chance to reasses and perfect your plan after things inevitably fall apart the first time through.
         </p> -->
-        <p>Control the Chaos</p>
-        <br>
-        <p class="mid-tagline">Bend Time</p>
-        <br>
-        <p class="last-tagline">Pull off the Perfect Heist</p>
-        <br>
-        <a href="">Download Now</a>
+        <p class="info-header">Bend Time</p>
+        <p class="mid-tagline info-header">Control the Chaos</p>
+        <p class="last-tagline info-header">Perfect Your Heist</p>
+        <div class="button-wrapper">
+          <a class="large-button" href="/resources/rulebook.pdf" target="_blank">Open the Rulebook</a>
+        </div>
     </div>
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
