--- a/pages/about.html
+++ b/pages/about.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <!-- <img class="background-image" src="/images/shenan-again-cover.PNG" alt="File:El Perelló - Old olive tree.jpg" alt="Olives"> -->
-  <img class="background-image" src="images/clock.PNG"/>
+  <img class="background-image" src="/images/lines.PNG"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><img height=50px; src="/images/clock.PNG"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +39,7 @@
   </nav>
   <div class="main-view">
     <div class="info">
-      <p>
+      <p class="info-header">
         About  
       </p>
     </div>
