--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -40,13 +40,13 @@
   <div class="main-view">
     <div class="info">
       <p class="info-header">Shenan-Again</p>
-      <p>Shenan-Again is a game of controlled chaos. You and your friends will take on the role of a crew of thieves attempting 
-        to pull off a difficult heist using a stolen Coil, a piece of alien technology that warps time. 
-        You'll enjoy thrilling successes and face crushing—but often hilarious—failures. </p>
-        <p>
+      <p>Shenan-Again is a game of controlled chaos. You and your friends take on the role of a crew of thieves attempting 
+        to pull off a difficult heist using a Coil, alien machinery that warps time. 
+        You'll enjoy thrilling success, and face crushing—but often hilarious—failure. </p>
+        <p class="optional">
           In the end, Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
-        Shenan-Again isn't just a heist story, it's a time-loop heist story.</p> 
-        <p>In the game, you'll relive the same heist three times, giving you three chances to get it right. 
+        See, Shenan-Again isn't just a heist story. It's a time-loop heist story.</p> 
+        <p>In Shenan-Again, you relive the same heist three times, giving you three chances to get it right. 
         The second and third time around, you'll already know a lot of what's going on, 
         letting you to perfect your plan. 
         </p>
