--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -41,7 +41,7 @@
     <div class="info">
       <p class="info-header">Shenan-Again</p>
       <p>Shenan-Again is a game of controlled chaos. You and your friends take on the role of a crew of thieves attempting 
-        to pull off a difficult heist using a Coil, alien machinery that warps time. 
+        to pull off a difficult heist using a Coil, an alien machine that warps time. 
         You'll enjoy thrilling success, and face crushing—but often hilarious—failure. </p>
         <p class="optional">
           In the end, Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
