--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -12,7 +12,7 @@
 <body>
   <img class="background-image" src="/images/lines.PNG"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img height=50px; src="/images/clock.PNG"></a>
+    <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.PNG"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
