Add mobile-only class

--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -51,7 +51,8 @@
         letting you to perfect your plan. 
         </p>
         <div class="button-wrapper">
-          <a class="large-button" href="/resources/rulebook.pdf" target="_blank">Download Rulebook</a>
+          <a class="large-button optional" href="/resources/rulebook.pdf" target="_blank">Download Rulebook</a>
+          <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Download</a>
         </div>       
     </div>
   </div>    
