Update footer and background image

--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img class="background-image" src="/images/lines.PNG"/>
+    <img class="background-image" src="/images/background.png"/>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.PNG"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
           <a class="nav-link" href="/pages/rulebook.html">Rulebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/extras.html">Extras</a>
+          <a class="nav-link" href="/pages/tools.html">Tools</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/about.html">About</a>
@@ -44,12 +44,13 @@
       </p>
     </div>
   </div>    
-  <nav class="navbar fixed-bottom navbar-dark bg-dark">
+  <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
+        <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
       </li>
     </ul>
+    <a class="footer-text">© 2022 Ben Schulzke</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
