Update mobile responsive design, start About section, new Rulebook section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <a class="nav-link" href="/pages/rulebook.html">Rulebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/tools.html">Tools</a>
+          <a class="nav-link" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About</a>
+          <a class="nav-link" href="/pages/tools.html">Tools</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/contribute.html">Contribute</a>
@@ -54,7 +54,8 @@
         <p class="mid-tagline info-header">Control the Chaos</p>
         <p class="last-tagline info-header">Perfect Your Heist</p>
         <div class="button-wrapper">
-          <a class="large-button" href="/resources/rulebook.pdf" target="_blank">Open the Rulebook</a>
+          <a class="large-button optional" href="/resources/rulebook.pdf" target="_blank">Open the Rulebook</a>
+          <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Rulebook</a>
         </div>
     </div>
   </div>    
