--- a/pages/about.html
+++ b/pages/about.html
@@ -26,10 +26,10 @@
           <a class="nav-link" href="/pages/rulebook.html">Rulebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/tools.html">Tools</a>
+          <a class="nav-link active" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/pages/about.html">About</a>
+          <a class="nav-link" href="/pages/tools.html">Tools</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/contribute.html">Contribute</a>
@@ -39,9 +39,20 @@
   </nav>
   <div class="main-view">
     <div class="info">
-      <p class="info-header">
-        About  
-      </p>
+      <p class="info-header">What's a Tabletop Roleplaying Game?</p>
+    </div>
+    <div class="info">
+      <p class="info-header">Shenan-Again</p>
+      <p>Shenan-Again is a game of controlled chaos. You and your friends take on the role of a crew of thieves attempting 
+        to pull off a difficult heist using a Coil, an alien machine that warps time. 
+        You'll enjoy thrilling success, and face crushing—but often hilarious—failure. </p>
+        <p class="optional">
+          In the end, Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
+        See, Shenan-Again isn't just a heist story. It's a time-loop heist story.</p> 
+        <p>In Shenan-Again, you relive the same heist three times, giving you three chances to get it right. 
+        The second and third time around, you'll already know a lot of what's going on, 
+        letting you to perfect your plan. 
+        </p>
     </div>
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
