--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -26,10 +26,10 @@
           <a class="nav-link active" href="/pages/rulebook.html">Rulebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/tools.html">Tools</a>
+          <a class="nav-link" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About</a>
+          <a class="nav-link" href="/pages/tools.html">Tools</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/contribute.html">Contribute</a>
@@ -39,17 +39,12 @@
   </nav>
   <div class="main-view">
     <div class="info">
-      <p class="info-header">Shenan-Again</p>
-      <p>Shenan-Again is a game of controlled chaos. You and your friends take on the role of a crew of thieves attempting 
-        to pull off a difficult heist using a Coil, an alien machine that warps time. 
-        You'll enjoy thrilling success, and face crushing—but often hilarious—failure. </p>
-        <p class="optional">
-          In the end, Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
-        See, Shenan-Again isn't just a heist story. It's a time-loop heist story.</p> 
-        <p>In Shenan-Again, you relive the same heist three times, giving you three chances to get it right. 
-        The second and third time around, you'll already know a lot of what's going on, 
-        letting you to perfect your plan. 
-        </p>
+      <p class="info-header">Shenan-Again — Rulebook</p>
+      <p>Welcome to Shenan-Again: the Time-Loop Heist RPG</p>
+        <p>Grab some paper, pencils, a handful of dice, and download the free rulebook by clicking below</p> 
+        <p>We won't charge you a dime for the book. The game is free! We want as many people as possible to play. We just have one request.</p>
+        <p>If you have fun, choose some way to pay it forward. What that means is up to you, but we have a few 
+          <a href=contribute.html>suggestions</a>. We're excited to hear about your Shenan-Agains!</p>
         <div class="button-wrapper">
           <a class="large-button optional" href="/resources/rulebook.pdf" target="_blank">Download Rulebook</a>
           <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Download</a>
