--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <div class="main-view">
-    <div class="info">
+    <div class="info vertical-center">
       <!-- <p>
         Shenan-Again is a game of controlled chaos.</p> 
         <p>You'll play as a
