add fullscreen class

--- a/index.html
+++ b/index.html
@@ -39,22 +39,11 @@
   </nav>
   <div class="main-view">
     <div class="info vertical-center">
-      <!-- <p>
-        Shenan-Again is a game of controlled chaos.</p> 
-        <p>You'll play as a
-        crew of thieves pulling off a difficult heist, with a time-warping twist. You’ll enjoy thrilling successes, but you’ll also face
-        crushing—yet often hilarious—failures. Shenan-Again is a game about taking
-        risks and learning from mistakes. It’s about second chances.
-        </p>
-        <p class="optional">
-          This isn't just a heist story. It’s a <em>time-loop</em> heist story. In the game, you’ll
-        relive the same heist three times, giving you the chance to reasses and perfect your plan after things inevitably fall apart the first time through.
-        </p> -->
         <p class="info-header">Bend Time</p>
         <p class="mid-tagline info-header">Control the Chaos</p>
         <p class="last-tagline info-header">Perfect Your Heist</p>
         <div class="button-wrapper">
-          <a class="large-button optional" href="/resources/rulebook.pdf" target="_blank">Open the Rulebook</a>
+          <a class="large-button fullscreen" href="/resources/rulebook.pdf" target="_blank">Open Rulebook</a>
           <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Rulebook</a>
         </div>
     </div>
