--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -46,7 +46,7 @@
         <p>If you have fun, choose some way to pay it forward. What that means is up to you, but we have a few 
           <a href=contribute.html>suggestions</a>. We're excited to hear about your Shenan-Agains!</p>
         <div class="button-wrapper">
-          <a class="large-button optional" href="/resources/rulebook.pdf" target="_blank">Download Rulebook</a>
+          <a class="large-button fullscreen" href="/resources/rulebook.pdf" target="_blank">Download Rulebook</a>
           <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Download</a>
         </div>       
     </div>
