Add probability charts (stable, responsive)

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -37,13 +37,37 @@
       </ul>
     </div>
   </nav>
-  <div class="main-view">
+  <div class="grid-view fullscreen">
+    <img src="/images/chart-key.png"/>
     <div class="info">
-      <p class="info-header">
-        Tools    
+      <div class="info-header">
+        Probability Charts
+      </div>
+      <p>
+        Use these charts to decide how many dice you'll roll for a given challenge
       </p>
+      <p>The tables show the nunber of dice rolled on the left, 
+        and the probability of rolling at least one of the target number(s) on the right</p>
+      <p>
+        The charts are the same info, graphed on a curve
+      </p>
+      <p> 
+        For example, if you roll three dice, you've only got a 42% chance of rolling at least one 6, 
+        while on five dice, that goes up to 60%
+      </p>
+      <p>Open the <a href="/resources/rulebook.pdf" target="_blank">rulebook</a> for detais on challenges rolls</p>
     </div>
-  </div>    
+  </div>
+  <div class="grid-view">
+    <img class="grid-image" src="/images/table-6.png"/>
+    <img class="grid-image" src="/images/table-5-6.png"/>
+    <img class="grid-image" src="/images/table-4-5-6.png"/>
+  </div>
+  <div class="grid-view">
+    <img class="grid-image" src="/images/chart-6.png"/>
+    <img class="grid-image" src="/images/chart-5-6.png"/>
+    <img class="grid-image" src="/images/chart-4-5-6.png"/>
+  </div>      
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
