--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -41,10 +41,10 @@
     <div class="info">
       <p class="info-header">Shenan-Again — Rulebook</p>
       <p>Welcome to Shenan-Again: the Time-Loop Heist RPG</p>
-        <p>Grab some paper, pencils, a handful of dice, and download the free rulebook by clicking below</p> 
-        <p>We won't charge you a dime for the book. The game is free! We want as many people as possible to play. We just have one request.</p>
-        <p>If you have fun, choose some way to pay it forward. What that means is up to you, but we have a few 
-          <a href=contribute.html>suggestions</a>. We're excited to hear about your Shenan-Agains!</p>
+        <p>Grab some paper, pencils, a handful of dice, and download the free rulebook below</p> 
+        <p>We won't charge you a dime for the book. The game is free! We want as many people as possible to play. We do have one request, though.</p>
+        <p>If you like the game, choose some way to pay it forward. What that means is up to you, but we have a few 
+          <a href=contribute.html>suggestions</a> to get you started. We're excited to hear about your Shenan-Agains!</p>
         <div class="button-wrapper">
           <a class="large-button fullscreen" href="/resources/rulebook.pdf" target="_blank">Download Rulebook</a>
           <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Download</a>
