Add contact us to footer, add About and Contribute pages

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Rulebook</a>
         </div>
     </div>
+  </div>
+  <div class="info-column float-right">
+    
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
