--- a/pages/about.html
+++ b/pages/about.html
@@ -40,6 +40,19 @@
   <div class="main-view">
     <div class="info">
       <p class="info-header">What's a Tabletop Roleplaying Game?</p>
+      <p>
+        A tabletop roleplaying game, or TTRPG, is a collaborative storytelling game. 
+        Each of you takes on the of one of the protagonists of the story.
+      </p>
+      <p>
+        One of you is the Gamemaster. As Gamemaster, your job is to present the players with people 
+        and obstacles that the players will need to deal with to accomplish their goal.
+      </p>
+      <p>
+        As a player, you describe how you'd like to react to the problems they're faced with. 
+        If there's a chance your action could fail, you'll roll some dice to see what happens, 
+        and that's where the <a href="/pages/rulebook.html">rules</a> come in.
+      </p>
     </div>
     <div class="info">
       <p class="info-header">Shenan-Again</p>
@@ -54,13 +67,22 @@
         letting you to perfect your plan. 
         </p>
     </div>
+    <div class="info">
+      <p class="info-header">Our Origin Story</p>
+      <p>Shenan-Again began as a way for a group of friends to play a fun, light TTRPG with mininmal prep time.</p>
+      <p>I asked my players what sort of game they'd like to play for a one-off, and the most popular choices were a heist game and a time-loop game. One of my players responded, "Well, why not both?"
+      </p>
+      <p>And I thought, "That sounds wild—let's give it a go!" And so Shenan-Again was born.</p>
+      <p>It's been a crazy journey up to this point, and I'm sure it will continue to be. We're thrilled to be getting Shenan-Again out of our heads and onto your table!</p>
+    </div>
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto fullscreen">
       <li class="nav-item">
         <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
       </li>
     </ul>
+    <a class="grey-link footer-text" href="">Contact Us</a>
     <a class="footer-text">© 2022 Ben Schulzke</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
