--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -42,6 +42,19 @@
       <p class="info-header">
           Contribute
       </p>
+      <p>Our goal is for Shenan-Again to be completely and truly free to play, for as many people as possible, 
+        so instead of asking you to pay for the rulebook, we'd like you to pay it forward in a different way.
+      </p>
+      <p>
+        However best works for you, but here's the basic idea: after you've played a game or two of Shenan-Again yourself, find a way to share it with someone new.
+      </p>
+      <p>
+        You might post about us on social media, share this website with a friend, or write us a review in your blog.
+        If your friend GMed the game for you, maybe you'll get together a new group and run it with them.</p>
+        <p>If there's anything you'd like to see addded or improved upon in our website, game mechanics, rulebook, or anywhere else, you can fill out this
+        <a href="">feedback form</a>.
+        <p>We hope you enjoy the game, and we can't wait to hear about the crazy shenanigans it leads you into!</p>
+      </p>
     </div>
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
